# llm-rs

./: AGENTS.md  Cargo.toml  DEVELOPMENT.md  README.md
.github/workflows/: ci.yml
examples/: basic.rs
src/: io.rs  lib.rs  math.rs  runtime.rs
src/math/: matrix.rs
src/math/matrix/: tests.rs
src/model/: mod.rs
src/tokenizer/: mod.rs
tests/: integration_test.rs
