[package]
name = "llm-rs"
version = "0.1.0"
edition = "2021"
authors = ["s-vitaliy"]
description = "Small llm interpreter written in rust"
license = "MIT"
repository = "https://github.com/s-vitaliy/llm-rs"
readme = "README.md"

[dependencies]

[dev-dependencies]

[lib]
name = "llm_rs"
path = "src/lib.rs"
